Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "titleName -\"art vandelay\" # 'Art Vandelay'"
+    "titleName = \"art vandelay\" # 'Art Vandelay'\n",
+    "titleName."
    ]
   },
   {
