Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "emailValidator = \"art.vandelay@vandelay.co\" # False\n",
-    "emailValidator.endsWith('')"
+    "emailValidator.endsWith('.com')"
    ]
   },
   {
