Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,8 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "website='vandelay.com' # 'www.vandelay.com'\n",
-    "website"
+    "websiteName='vandelay.com' # 'www.vandelay.com'\n",
+    "website="
    ]
   },
   {
