Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "websiteName='vandelay.com' # 'www.vandelay.com'\n",
-    "website="
+    "website=website+'w'"
    ]
   },
   {
