--- a/index.ipynb
+++ b/index.ipynb
@@ -233,15 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'website' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-469b9ed1ed39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mwebsiteName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'vandelay.com'\u001b[0m \u001b[0;31m# 'www.vandelay.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwebsite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwebsite\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'www.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'website' is not defined"
+     ]
+    }
+   ],
    "source": [
     "websiteName='vandelay.com' # 'www.vandelay.com'\n",
-    "website=website+'w'"
+    "website=website+'www.'"
    ]
   },
   {
