--- a/index.ipynb
+++ b/index.ipynb
@@ -233,14 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'vandelay.comwww.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "websiteName='vandelay.com' # 'www.vandelay.com'\n",
-    "website=websiteName+'www.'"
+    "website=websiteName+'www.'\n",
+    "website"
    ]
   },
   {
