Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    ],
    "source": [
     "websiteName='vandelay.com' # 'www.vandelay.com'\n",
-    "website=websiteName+'www.'\n",
+    "website=+'www.'websiteName\n",
     "website"
    ]
   },
