--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -241,17 +241,17 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.comwww.'"
+       "' www.vandelay.com'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "websiteName='vandelay.com' # 'www.vandelay.com'\n",
-    "website=+'www.'websiteName\n",
+    "website=' www.' + websiteName\n",
     "website"
    ]
   },
