Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,24 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'phonep' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-7baffa54b8ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mphone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"7285553334\"\u001b[0m \u001b[0;31m# 728\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mareaCode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mphonep\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'phonep' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phone = \"7285553334\" # 728\n",
-    "areaCode = phonep[:2]"
+    "areaCode = phone[:2]"
    ]
   },
   {
