Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,15 +276,14 @@
    "outputs": [],
    "source": [
     "phone = \"7285553334\" # 728\n",
-    "areaCode = phone[:2]"
+    "areaCode = phone[:2]\n",
+    "areaCode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "phone = \"7285553334\" # 728\n",
