--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone = \"7285553334\" # 728\n",
-    "areaCode = phone[:2]"
+    "areaCode = phone[:3]\n",
+    "areaCode"
    ]
   },
   {
